--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <title>HTML Images</title>
 </head>
 <body>
-  <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fdevpost.com%2Fsoftware%2Fninja-cat-adventure&psig=AOvVaw0JpXz_Y4oQ8BB3qcf3XdWn&ust=1610242936487000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCNiCxOHcje4CFQAAAAAdAAAAABAD">
-  <img 
+  <img src="https://news.cgtn.com/news/31496a4e33597a6333566d54/img/ae656d6a-bf52-4206-9424-1b541ef19695.jpg">
+  <img src=""
 
 </body>
 </html>
