--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <img src="https://news.cgtn.com/news/31496a4e33597a6333566d54/img/ae656d6a-bf52-4206-9424-1b541ef19695.jpg">
+  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRjkgT1YO0t5nNbkiiUVpRt4CFgxzricpo1dA&usqp=CAU" alt="cat karate kicking dog in an alley">
   <img src=""
 
 </body>
